benchmarks/NPB3.3-SER-C/CG/cg.error
gcc  -c -I../common -g -Wall -O3 -mcmodel=medium cg.c
cg.c: In function 'main':
cg.c:200:20: error: lvalue required as unary '&' operand
   zeta    = randlc(&(long double)tran, (long double)amult);
                    ^
cg.c:250:49: warning: passing argument 9 of 'conj_grad' from incompatible pointer type
     conj_grad(colidx, rowstr, x, z, a, p, q, r, &rnorm);
                                                 ^
cg.c:83:13: note: expected 'double *' but argument is of type 'long double *'
 static void conj_grad(int colidx[],
             ^
cg.c:301:49: warning: passing argument 9 of 'conj_grad' from incompatible pointer type
     conj_grad(colidx, rowstr, x, z, a, p, q, r, &rnorm);
                                                 ^
cg.c:83:13: note: expected 'double *' but argument is of type 'long double *'
 static void conj_grad(int colidx[],
             ^
cg.c:322:5: warning: format '%E' expects argument of type 'double', but argument 3 has type 'long double' [-Wformat=]
     printf("    %5d       %20.14E%20.13f\n", it, rnorm, zeta);
     ^
cg.c:322:5: warning: format '%f' expects argument of type 'double', but argument 4 has type 'long double' [-Wformat=]
cg.c:348:7: warning: format '%E' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
       printf(" Zeta is    %20.13E\n", zeta);
       ^
cg.c:349:7: warning: format '%E' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
       printf(" Error is   %20.13E\n", err);
       ^
cg.c:353:7: warning: format '%E' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
       printf(" Zeta                %20.13E\n", zeta);
       ^
cg.c:354:7: warning: format '%E' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
       printf(" The correct zeta is %20.13E\n", zeta_verify_value);
       ^
cg.c:387:9: warning: format '%f' expects argument of type 'double', but argument 3 has type 'long double' [-Wformat=]
         printf("  %8s:%9.3f\n", t_names[i], t);
         ^
cg.c:389:9: warning: format '%f' expects argument of type 'double', but argument 3 has type 'long double' [-Wformat=]
         printf("  %8s:%9.3f  (%6.2f%%)\n", t_names[i], t, t*100.0/tmax);
         ^
cg.c:389:9: warning: format '%f' expects argument of type 'double', but argument 4 has type 'long double' [-Wformat=]
cg.c:392:11: warning: format '%f' expects argument of type 'double', but argument 3 has type 'long double' [-Wformat=]
           printf("    --> %8s:%9.3f  (%6.2f%%)\n", "rest", t, t*100.0/tmax);
           ^
cg.c:392:11: warning: format '%f' expects argument of type 'double', but argument 4 has type 'long double' [-Wformat=]
cg.c: In function 'icnvrt':
cg.c:875:16: warning: unused variable 'x_H' [-Wunused-variable]
    long double x_H = x;
                ^
make[1]: *** [Makefile:20: cg.o] Error 1
make[1]: Leaving directory '/usr/WS1/guo8/home1/clang-llvm/clang-tools-extra/pLiner/benchmarks/NPB3.3-SER-C/CG'
make: *** [Makefile:35: cg] Error 2

